--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,4 @@ server.ssl.key-store=classpath:keyStore.jks
 server.ssl.key-password=txnCertificate
 server.ssl.key-store-type=JKS
 server.ssl.enabled=false
+open.banking.accounts.transaction.signed.key=transactionKey
